<resources>
    <string name="app_name">My App Portfolio</string>

    <!-- TextView Strings -->
    <string name="text_view_apps">My Nano Degree Apps!</string>

    <!-- Button Text -->
    <string name="button_movies">Popular Movies</string>
    <string name="button_stock">Stock Hawk</string>
    <string name="button_build">Build It Bigger</string>
    <string name="button_material">Make Your App Material</string>
    <string name="button_ubiquitous">Go Ubiquitous</string>
    <string name="button_capstone">Capstone</string>

    <string name="toast_message">This button will launch my %1$s app!</string>
</resources>
