<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thomaskioko.myappportfolio.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_view_apps"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonPopularMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/button_movies"
        android:paddingTop="10dp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/button_stock"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonBigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/button_build"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/button_material"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonUbiquitous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/button_ubiquitous"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonCapstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/button_capstone"
        android:textColor="@android:color/white" />


</LinearLayout>
